@@ -22,41 +22,50 @@
  .Parameter tenant
   If you specify the uninstall switch, then you can specify the tenant from which you want to uninstall the app
  .Example
-  Unpublish-BcContainerApp -containerName test2 -appName myapp
+  Unpublish-BcContainerApp -containerName test2 -name myapp
  .Example
-  Unpublish-BcContainerApp -containerName test2 -appName myapp -uninstall
+  Unpublish-BcContainerApp -containerName test2 -name myapp -uninstall
 #>
 function UnPublish-BcContainerApp {
     Param (
         [string] $containerName = $bcContainerHelperConfig.defaultContainerName,
+        [Parameter(Mandatory=$false)]
+        [string] $tenant = "default",
+        [Alias("appName")]
         [Parameter(Mandatory=$true)]
-        [string] $appName,
+        [string] $name,
+        [Alias("appPublisher")]
+        [Parameter(Mandatory=$false)]
+        [string] $publisher,
+        [Alias("appVersion")]
+        [Parameter(Mandatory=$false)]
+        [string] $version,
         [switch] $unInstall,
         [switch] $doNotSaveData,
         [switch] $doNotSaveSchema,
-        [switch] $force,
-        [Parameter(Mandatory=$false)]
-        [string] $publisher,
-        [Parameter(Mandatory=$false)]
-        [string] $version,
-        [Parameter(Mandatory=$false)]
-        [string] $tenant = "default"
+        [switch] $force
     )
 
-    Invoke-ScriptInBcContainer -containerName $containerName -ScriptBlock { Param($appName, $unInstall, $tenant, $publisher, $version, $doNotSaveData, $doNotSaveSchema, $force)
+    Invoke-ScriptInBcContainer -containerName $containerName -ScriptBlock { Param($name, $unInstall, $tenant, $publisher, $version, $doNotSaveData, $doNotSaveSchema, $force)
         if ($unInstall) {
-            Write-Host "Uninstalling $appName from tenant $tenant"
+            Write-Host "Uninstalling $name from tenant $tenant"
             $params = @{}
+            if ($publisher) {
+                $params += @{ 'Publisher' = $publisher }
+            }
+            if ($version) {
+                $params += @{ 'Version' = $version }
+            }
             if ($doNotSaveData) {
                 $params += @{ "DoNotSaveData" = $true }
             }
             if ($force) {
                 $params += @{ "force" = $true }
             }
-            Uninstall-NavApp -ServerInstance $ServerInstance -Name $appName -Tenant $tenant @params
+            Uninstall-NavApp -ServerInstance $ServerInstance -Name $name -Tenant $tenant @params
             if ($doNotSaveData -and $doNotSaveSchema) {
-                Write-Host "Cleaning Schema from $appName on $tenant"
-                Sync-NAVApp -ServerInstance $ServerInstance -Name $appName -Tenant $tenant -mode Clean -force:$force
+                Write-Host "Cleaning Schema from $name on $tenant"
+                Sync-NAVApp -ServerInstance $ServerInstance -Name $name -Tenant $tenant -mode Clean -force:$force
             }
         }
         $params = @{}
@@ -66,16 +75,16 @@ function UnPublish-BcContainerApp {
         if ($version) {
             $params += @{ 'Version' = $version }
         }
-        $appInfo = (Get-NAVAppInfo -ServerInstance $ServerInstance -Name $appName @params)
+        $appInfo = (Get-NAVAppInfo -ServerInstance $ServerInstance -Name $name @params)
         if ([bool]($appInfo.PSObject.Properties.Name -eq 'Scope')) {
             if ($appInfo.Scope -eq "Tenant") {
                 $params += @{ 'Tenant' = $tenant }
             }
         }
 
-        Write-Host "Unpublishing $appName"
-        Unpublish-NavApp -ServerInstance $ServerInstance -Name $appName @params
-    } -ArgumentList $appName, $unInstall, $tenant, $publisher, $version, $doNotSaveData, $doNotSaveSchema, $force
+        Write-Host "Unpublishing $name"
+        Unpublish-NavApp -ServerInstance $ServerInstance -Name $name @params
+    } -ArgumentList $name, $unInstall, $tenant, $publisher, $version, $doNotSaveData, $doNotSaveSchema, $force
     Write-Host -ForegroundColor Green "App successfully unpublished"
 }
 Set-Alias -Name UnPublish-NavContainerApp -Value UnPublish-BcContainerApp
