@@ -5,6 +5,7 @@ Issue #1563 Run-AlValidation with multiple apps fails
 Run-AlValidation to support urls as apps, previousapps and installapps
 Add parameter CopySymbolsFromContainer to Compile-AppInBcContainer to speed up symbols download
 Use CopySymbolsFromContainer in Run-AlCops
+Issue #1568 Add publisher parameter to Unpublish and Uninstall app
 
 1.0.17
 Issue #1494 Creating another container based on existing artifact
